syntax = "proto3";

package pb; 

option go_package = "order-svc/pb";

message GenericResponse {
  string message = 1;
  int32 status_code = 2;
}

message CreateOrderRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CreateOrderResponse {
  string order_id = 1;
  GenericResponse generic_response = 2;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}